fix: don't stretch avatars (#4040)

--- a/app/style/components/participant-avatar.less
+++ b/app/style/components/participant-avatar.less
@@ -183,6 +183,7 @@ participant-avatar {
     > img {
       width: 100%;
       height: 100%;
+      object-fit: cover;
     }
   }
 
